--- a/Static/html/HomePage.html
+++ b/Static/html/HomePage.html
@@ -3,20 +3,24 @@
 <html lang="en-us">
 <head>
     <title>Expense Tracker Home Page!</title>
-   </head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./HomePage.css" />
+</head>
 <body>
     <div class=" container">
         <header>Expense Tracker Homepage</header>
         <main class="container">
             <!--comment-->
             <h1>WELCOME TO EXPENSE TRACKER</h1>
-            <p>
+            <div class="p-3 mb-2 bg-success text-white">
                 It really is important to keep track of how you are spending your money. It is the first step to understanding how you are managing your money,
                 and to taking control of your finances. It may seem like a lot of work when you first begin, but you can make it as simple or complicated as you want to.
                 Tracking your expenses can help you stop feeling like you have little to show for your hard work.
-            </p>
+            </div>
             <button>Search Box</button>    <button>Search</button>
             <br />
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <label for="inputEmail" class="sr-only">Email address</label>
             <br>Username_______________
             <br>Password_______________
             <br />
@@ -27,8 +31,13 @@
             <button>Forgot Username</button>                <button>Forgot Password</button>
             <br />
             <br />
-            <button>SignUp</button>               
-                
+            <p><a href="#" class="text-primary"> SignUp</a></p>
+            
+
+            <div class="center-image">
+                <img src="https://www.nomoredebts.org/sites/default/files/Following-Coin-Trail-opt.jpg" />
+            </div>
+
         </main>
         <footer>&copy;2019 &mdash; Jeevan Khadka</footer>
     </div>
